# storage/api-docs/api-docs.json
@@ -233,6 +233,39 @@
                 }
             }
         },
+        "/api/reset-pin": {
+            "post": {
+                "operationId": "0774a4086eb1a15e74cc44c6c4ff72d8",
+                "requestBody": {
+                    "description": "request parameters to reset pin",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/NumberRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "201": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/api/register-account": {
             "post": {
                 "operationId": "a0965bc91eb2a0f86b8f67b45a789dbb",
